yaml/nginx/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  # annotations:
  #   kubernetes.io/ingress.class: public
spec:
  rules:
  - host: localhost.com
    http:
      paths:
        - path: /hello
          pathType: Prefix
          backend:
            service: 
              name: hello-1
              port:
                number: 8000
        - path: /hello2
          pathType: Prefix
          backend:
            service: 
              name: hello-2
              port: 
                number: 8000
