yaml/nginx/test-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hello2
        backend:
          serviceName: hello-2
          servicePort: 8000
